# winecarte

./: .gitignore  Cargo.toml  Justfile  Makefile  flake.nix  rust-toolchain.toml
crates/vdf/: Cargo.toml
crates/vdf/src/: lib.rs
crates/wine2linux/: Cargo.toml
crates/wine2linux/src/: main.rs
crates/winecarte-run/: Cargo.toml
crates/winecarte-run/src/: main.rs
nix/: devshell.nix
nix/lib/: default.nix
