[package]
name = "wine2linux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = [ "derive" ] }
env_logger = "0.11.10"
log = "0.4.29"
thiserror = "2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }
